# rate-prediction

./: .env  .gitignore  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sequence_diagram.puml
.github/.github/workflows/: cd.yml
.github/workflows/: ci.yml
src/: Dockerfile  Dockerfile.ci  algorithm_tests.py  celery.py  main.py  pyproject.toml
src/api/: __init__.py  update.py
src/bot/: base.py
src/bot/branches/: predict.py  start.py
src/core/: celery.py  config.py  enums.py  tasks.py
src/core/schemas/: telegram_api.py
src/dao/: base.py
src/dao/redis/: key_schema.py
src/dao/redis/asynchronous/: base.py  predictions.py
src/dao/redis/synchronous/: base.py  predictions.py
src/data/: bitcoin.csv
src/handlers/: base.py  common.py  predict.py
src/rate_prediction/: celery.py  config.py
src/routers/: __init__.py  update.py
src/schemas/: telegram_api.py
src/state_handler/: base.py
src/state_handler/branches/: predict.py  start.py
src/utils/: algorithm_tests.py  enums.py  predict_rate.py  redis_key_schema.py  telegram_api.py
