[tool.poetry]
name = "Rate prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
statsmodels = "^0.13.2"
sklearn = "^0.0"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
httpx = "^0.22.0"
aioredis = "^2.0.1"
celery = {extras = ["redis"], version = "^5.2.3"}

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.1"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
